log
Sun, Mar 30, 2025  3:28:26 PM: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  0|0
25021aa
Sun, Mar 30, 2025  3:29:29 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3a00f78
Sun, Mar 30, 2025  3:29:50 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
5216fc6
Sun, Mar 30, 2025  3:30:48 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3596c03
Sun, Mar 30, 2025  3:31:31 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/70
44898f1
Sun, Mar 30, 2025  3:32:06 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
589137d
Sun, Mar 30, 2025  3:33:06 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b2deef1
Sun, Mar 30, 2025  3:34:20 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
67fcf46
Sun, Mar 30, 2025  3:36:48 PM: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
950c74d
Sun, Mar 30, 2025  3:38:43 PM: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
040d989
Sun, Mar 30, 2025  3:58:29 PM: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'pushCurrent':
list.c:82:9: error: statement with no effect [-Werror=unused-value]
   82 |     list->current;
      |     ~~~~^~~~~~~~~
list.c:81:6: error: infinite recursion detected [-Werror=infinite-recursion]
   81 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
list.c:83:5: note: recursive call
   83 |     pushCurrent(list,data);
      |     ^~~~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8a0bf43
Sun, Mar 30, 2025  4:09:26 PM: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
6a0c3ee
Sun, Mar 30, 2025  4:11:32 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
7043b5c
Sun, Mar 30, 2025  4:13:22 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
bc9c9d2
Sun, Mar 30, 2025  4:14:16 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
7db6319
Sun, Mar 30, 2025  4:15:05 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3fd94b8
Sun, Mar 30, 2025  4:15:19 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
4ae11e7
